# wasmedge_rust

./: .gitignore  Cargo.toml  backtrace.tmp
src/: main.rs
tmp/: listener.tmp
wasm_app1/: Cargo.toml
wasm_app1/src/: main.rs
wasm_app2/: Cargo.toml
wasm_app2/src/: main.rs
