[package]
name = "wasmedge_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
gag = "1.0.0"
tokio = { version = "1.36.0", features = ["full"] }
wasmedge-sdk = { version = "0.13.2", features = ["wasi_nn", "async"] }
wasmedge-sys = "0.17.5"
wasmedge-types = "0.4.4"
