[package]
name = "wasm_app1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecodec = "0.4.15"
httpcodec = "0.2.3"
wasi = "0.12.0"
# wasmedge-sdk = "0.13.2"
# wasmedge-sys = "0.17.5"
wasmedge_wasi_socket = "0.5.3"
